--- a/server/matthan/app/views/operations/index.html.erb
+++ b/server/matthan/app/views/operations/index.html.erb
@@ -37,6 +37,10 @@
   <%= submit_tag 'Tìm kiếm', class: 'btn btn-success' %>
 <% end %>
 
+<b>Tổng thời gian: </b><%= AppUtil.duration_text(@sum_duration) %> 
+<br/>
+<br/>
+
 <table class='table'>
   <tr>
     <th>Thời gian A</th>
